[package]
edition = "2021"
name = "test_in_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
rstest = "0.16.0"
tokio = { version = "1.26.0", features = ["test-util", "macros"] }
